# linkr-audio

./: .gitignore  Cargo.toml  README.md  cloudflare-env.d.ts  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  wrangler.toml
api/: .gitignore  README.md  openapi.json  wrangler.toml
api/src/: auth.rs  lib.rs
api/src/artists/: mod.rs
api/src/links/: apple_music.rs  mod.rs  spotify.rs  tidal.rs
api/src/queries/: schema.sql
api/src/releases/: mod.rs
images/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
images/src/: index.ts
linkr-proxy/: package.json  worker-configuration.d.ts  wrangler.jsonc
linkr-proxy/src/: index.ts
proxy/: package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
site/: README.md  cloudflare-env.d.ts  eslint.config.mjs  instrumentation-client.ts  next.config.ts  open-next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
site/public/: _headers
site/src/: middleware.ts  proxy.ts
site/src/actions/: artists.ts  auth.ts  getlinks.ts  images.ts  releases.ts
site/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
site/src/lib/: apihelper.ts  dal.ts  definitions.ts  imageLoader.ts  schema.d.ts  (+2 more)
src/: apple_music.rs  auth.rs  lib.rs  proxy.ts  spotify.rs  tidal.rs
src/app/: globals.css  layout.tsx
src/artists/: mod.rs
src/lib/: apihelper.ts  auth.ts  dal.ts  definitions.ts  schema.d.ts  session.ts  utils.ts
src/links/: apple_music.rs  mod.rs  tidal.rs
src/queries/: schema.sql
src/releases/: mod.rs
(+84 files in other folders)
