[package]
name = "sr-api"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Raymond <spencer@spencerraymon.de>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http", "d1"] }
worker-macros = { version = "0.7", features = ['http'] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.25", features = ["json"] }
futures = "0.3.31"
sha2 = "0.10.9"
base64 = "0.22.1"